src/snapshots/transmute__html__tests__serialize_nested_struct.snap
---
source: src/html.rs
expression: "&html"
---
<!DOCTYPE html>
<html>
<head>
    <style>
        body {
            background-color: #222;
        }

        * {
            font-family: monospace;
            color: #a9b7c6;
            cursor: default;
        }

        .line {
            position:absolute;
            left:0;
        }

        ul {
            padding: 0;
        }

        li {
            list-style: none;
            padding-left: 2em;
        }

        span {
            display: inline-block;
        }

        .kw {
            color: #cc7832;
        }

        .num {
            color: #6897bb;
        }

        .ident {
            cursor: pointer;
        }

        .ident:hover {
            background-color: blue;
            color: white;
        }

        .to {
            background-color: green;
            color: white;
        }

        .same {
            background-color: orange;
            color: black;
        }
    </style>
    <script
            src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
            integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8="
            crossorigin="anonymous"></script>
    <script>
        $(document).ready(function () {
            $("li").filter((_, e) => $(e).children("ul").length === 0).each((i, e) => {
                $(e).prepend("<span class=\"line\">" + (i + 1) + "</span>");
            });
            $("[data-ident-ref],[data-type-ref]")
                .on("mousemove", (e) => {
                    let self = $(e.currentTarget);

                    let ref_attr = "data-ident-ref";
                    if (e.ctrlKey) {
                        ref_attr = "data-type-ref";
                    }

                    let ref = self.attr(ref_attr);

                    $(".to").removeClass("to");
                    $(".same").removeClass("same");
                    $("[" + ref_attr + "=" + ref + "]").addClass("same");
                    $("#" + ref).addClass("to");

                    e.stopImmediatePropagation();
                })
            .on("mouseout", (e) => {
                $(".to").removeClass("to");
                $(".same").removeClass("same");
            });
        });
    </script>
</head>
<body>
<ul>
  <li id="type__stmt0">
    <span class="kw">struct</span>
    <span id="ident__stmt0" class="ident">Point</span>
    <span class="curly">{</span>
  </li>
  <li>
    <ul>
      <li>
        <span id="ident__stmt0_index0" class="ident">x</span>
        <span class="colon">: </span>
        <span id="ident__stmt0_index0" class="ident">number</span>
      </li>
      <li>
        <span id="ident__stmt0_index1" class="ident">y</span>
        <span class="colon">: </span>
        <span id="ident__stmt0_index1" class="ident">number</span>
      </li>
    </ul>
  </li>
  <li>
    <span class="curly">}</span>
  </li>
  <li id="type__stmt1">
    <span class="kw">struct</span>
    <span id="ident__stmt1" class="ident">Segment</span>
    <span class="curly">{</span>
  </li>
  <li>
    <ul>
      <li>
        <span id="ident__stmt1_index0" class="ident">from</span>
        <span class="colon">: </span>
        <span id="ident__stmt1_index0" class="ident">Point</span>
      </li>
      <li>
        <span id="ident__stmt1_index1" class="ident">to</span>
        <span class="colon">: </span>
        <span id="ident__stmt1_index1" class="ident">Point</span>
      </li>
    </ul>
  </li>
  <li>
    <span class="curly">}</span>
  </li>
  <li>
    <span class="kw">let</span>
    <span id="ident__stmt3" class="ident">len</span>
    <span class="par">(</span>
    <span id="ident__stmt3_index0" class="ident">seg</span>
    <span class="colon">: </span>
    <span id="ident__stmt3" class="ident">Segment</span>
    <span class="par">)</span>
    <span class="equal"> = </span>
    <span class="curly">{</span>
  </li>
  <li>
    <ul>
      <li>
        <span class="ident" data-ident-ref="ident__stmt3_index0" data-type-ref="type__stmt1">seg</span>
        <span class="dot">.</span>
        <span class="ident" data-ident-ref="ident__stmt1_index0" data-type-ref="type__stmt0">from</span>
        <span class="dot">.</span>
        <span class="ident" data-ident-ref="ident__stmt0_index0" data-type-ref="type__native_number">x</span>
        <span class="semicolon">;</span>
      </li>
    </ul>
  </li>
  <li>
    <span class="curly">}</span>
  </li>
</ul>
</body>
</html>

